# melancholy

./: Cargo.toml  README.md  build.bat
src/: app.rs  lib.rs
src/components/: footer.rs  mod.rs
src/components/misc/: buttons.rs
src/dom/: mod.rs  rtml.rs
src/pages/: about.rs  home.rs  not_found.rs
src/utils/: mod.rs  rtml.rs  snippets.rs
