[package]
name = "melancholy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Text",
    "Location",
] }

[build-dependencies]
wasm-bindgen-cli = "0.2.100"
